# AirspyHFDecimate

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml
src/: main.cpp
tests/: test_main.cpp
